--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ target/
 dbt_packages/
 logs/
 profiles.yml
+keyfile.pem
 
 .DS_Store
 
@@ -14,3 +15,4 @@ profiles.yml
 
 .ruff_cache
 __pycache__
+dbt_internal_packages/
