--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -7,7 +7,7 @@ require-dbt-version: ">=1.5.0"
 dbt-cloud:
   project-id: 275557 # Put your project id here
 
-profile: default # Put your profile here
+profile: user # Put your profile here
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
@@ -16,7 +16,6 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"
 clean-targets:
   - "target"
   - "dbt_packages"
