--- a/models/staging/stg_products.yml
+++ b/models/staging/stg_products.yml
@@ -7,3 +7,10 @@ models:
         data_tests:
           - not_null
           - unique
+      - name: product_type
+        description: The type of each product
+        data_tests:
+          - not_null
+          - accepted_values:
+              arguments:
+                values: ["jaffle", "beverage"]
